# service/goods/api/goods/v1/goods_grpc.pb.go
@@ -1,8 +1,4 @@
 // Code generated by protoc-gen-go-grpc. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-grpc v1.2.0
-// - protoc             v3.19.4
-// source: goods/v1/goods.proto
 
 package v1
 
@@ -30,6 +26,7 @@ type GoodsClient interface {
 	// 商品参数属性名和值
 	CreateAttrValue(ctx context.Context, in *AttrValueRequest, opts ...grpc.CallOption) (*AttrResponse, error)
 	CreateGoods(ctx context.Context, in *CreateGoodsRequest, opts ...grpc.CallOption) (*CreateGoodsResponse, error)
+	GoodsList(ctx context.Context, in *GoodsFilterRequest, opts ...grpc.CallOption) (*GoodsListResponse, error)
 }
 
 type goodsClient struct {
@@ -94,6 +91,15 @@ func (c *goodsClient) CreateGoods(ctx context.Context, in *CreateGoodsRequest, o
 	return out, nil
 }
 
+func (c *goodsClient) GoodsList(ctx context.Context, in *GoodsFilterRequest, opts ...grpc.CallOption) (*GoodsListResponse, error) {
+	out := new(GoodsListResponse)
+	err := c.cc.Invoke(ctx, "/goods.v1.Goods/GoodsList", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // GoodsServer is the server API for Goods service.
 // All implementations must embed UnimplementedGoodsServer
 // for forward compatibility
@@ -106,6 +112,7 @@ type GoodsServer interface {
 	// 商品参数属性名和值
 	CreateAttrValue(context.Context, *AttrValueRequest) (*AttrResponse, error)
 	CreateGoods(context.Context, *CreateGoodsRequest) (*CreateGoodsResponse, error)
+	GoodsList(context.Context, *GoodsFilterRequest) (*GoodsListResponse, error)
 	mustEmbedUnimplementedGoodsServer()
 }
 
@@ -130,6 +137,9 @@ func (UnimplementedGoodsServer) CreateAttrValue(context.Context, *AttrValueReque
 }
 func (UnimplementedGoodsServer) CreateGoods(context.Context, *CreateGoodsRequest) (*CreateGoodsResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CreateGoods not implemented")
+}
+func (UnimplementedGoodsServer) GoodsList(context.Context, *GoodsFilterRequest) (*GoodsListResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GoodsList not implemented")
 }
 func (UnimplementedGoodsServer) mustEmbedUnimplementedGoodsServer() {}
 
@@ -252,6 +262,24 @@ func _Goods_CreateGoods_Handler(srv interface{}, ctx context.Context, dec func(i
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Goods_GoodsList_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GoodsFilterRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(GoodsServer).GoodsList(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/goods.v1.Goods/GoodsList",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(GoodsServer).GoodsList(ctx, req.(*GoodsFilterRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Goods_ServiceDesc is the grpc.ServiceDesc for Goods service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -282,6 +310,10 @@ var Goods_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "CreateGoods",
 			Handler:    _Goods_CreateGoods_Handler,
+		},
+		{
+			MethodName: "GoodsList",
+			Handler:    _Goods_GoodsList_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
